# resume-parser

./: .env.example  .gitignore  Cargo.toml  GUIDE.md  README.md  candidates.metrics.json  run.sh  setup.sh
examples/: gemini_smoke.rs
sample_resumes/: alice_fresher.txt  bob_backend_employed.txt  charlie_gap_frontend.txt  dinesh_fullstack.docx  emma_devops.doc
src/: agents.rs  config.rs  deterministic.rs  excel.rs  gemini.rs  ingest.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  schema.rs  store.rs  util.rs
