[package]
name = "resume-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.33"
indicatif = "0.18.6"
pdf-extract = "0.12.0"
phonenumber = "0.3.10"
quick-xml = "0.41.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls", "http2", "charset"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rust_xlsxwriter = "0.96.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["full"] }
walkdir = "2.5.0"
zip = "8.6.0"

